--- a/views/bookTest.ejs
+++ b/views/bookTest.ejs
@@ -18,7 +18,10 @@
                   </div>
                   <div class="row justify-content-between text-left">
                       <div class="form-group col-sm-6 flex-column d-flex"> <label class="form-control-label px-3">Age<span class="text-danger"> *</span></label> <input type="text" id="age" name="age" placeholder="" onblur="validate(5)"> </div>
+                      <div class="form-group col-sm-6 flex-column d-flex"> <label class="form-control-label px-3">Your Birth-Date *</span><input type="date" id="birthday" name="birthday"> </div>
                   </div>
+                 
+
                   <div class="row justify-content-between text-left">
                       <div class="form-group col-12 flex-column d-flex"> <label class="form-control-label px-3">Full Adress<span class="text-danger"> *</span></label> <input type="text" id="ads" name="ads" placeholder="" onblur="validate(6)"> </div>
                   </div>
