--- a/views/login.ejs
+++ b/views/login.ejs
@@ -6,7 +6,7 @@
   <title>KIT-HEALTH</title>
   <meta charset="utf-8">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://kit.fontawesome.com/8286c5a5fc.css" crossorigin="anonymous"> 
+  <script src="https://kit.fontawesome.com/7188e4a54a.js" crossorigin="anonymous"></script> 
   
   <link rel="stylesheet" href="/css/styles.css">
   <body>
@@ -20,26 +20,13 @@
             class="img-fluid" alt="Sample image">
         </div>
         <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
+          <div class="d-flex flex-row align-items-center justify-content-center justify-content-lg-start">
+            <p class="lead fw-normal mb-0 me-3">Sign in with</p>
+            <a type="button" class="btn btn-primary btn-floating mx-1" href="/auth/google">
+              <i class="fa-brands fa-google"></i>
+            </a>
+          </div>
           <form action="/login" method="post">
-            <div class="d-flex flex-row align-items-center justify-content-center justify-content-lg-start">
-              <p class="lead fw-normal mb-0 me-3">Sign in with</p>
-              <button type="button" class="btn btn-primary btn-floating mx-1">
-                <i class="fab fa-facebook-f"></i>
-              </button>
-  
-              <button type="button" class="btn btn-primary btn-floating mx-1">
-                <i class="fab fa-twitter"></i>
-              </button>
-  
-              <button type="button" class="btn btn-primary btn-floating mx-1">
-                <i class="fab fa-linkedin-in"></i>
-              </button>
-
-              <button type="button" class="btn btn-primary btn-floating mx-1">
-                <i class="fab fa-google"></i>
-              </button>
-            </div>
-  
             <div class="divider d-flex align-items-center my-4">
               <p class="text-center fw-bold mx-3 mb-0">Or</p>
             </div>
@@ -59,13 +46,6 @@
             </div>
   
             <!-- <div class="d-flex justify-content-between align-items-center">
-                Checkbox 
-              <div class="form-check mb-0">
-                <input class="form-check-input me-2" type="checkbox" value="" id="form2Example3" />
-                <label class="form-check-label" for="form2Example3">
-                  Remember me
-                </label>
-              </div>
               <a href="#!" class="text-body">Forgot password?</a>
             </div> -->
   
