--- a/views/register.ejs
+++ b/views/register.ejs
@@ -24,18 +24,18 @@
   
                   <form action="/register" method="post" class="mx-1 mx-md-4">
   
-                    <!-- <div class="d-flex flex-row align-items-center mb-4">
+                    <div class="d-flex flex-row align-items-center mb-4">
                       <i class="fas fa-user fa-lg me-3 fa-fw"></i>
                       <div class="form-outline flex-fill mb-0">
-                        <input type="text" class="form-control" />
-                        <label class="form-label" for="form3Example1c">Your Name</label>
+                        <input type="text" class="form-control" name="username"/>
+                        <label class="form-label" for="username">Your Name</label>
                       </div>
-                    </div> -->
+                    </div>
   
                     <div class="d-flex flex-row align-items-center mb-4">
                       <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
                       <div class="form-outline flex-fill mb-0">
-                        <input type="email" class="form-control" name="username" />
+                        <input type="email" class="form-control" name="useremail" />
                         <label class="form-label" for="email">Your Email</label>
                       </div>
                     </div>
@@ -47,18 +47,10 @@
                         <label class="form-label" for="password">Password</label>
                       </div>
                     </div>
-  
-                    <!-- <div class="d-flex flex-row align-items-center mb-4">
-                      <i class="fas fa-key fa-lg me-3 fa-fw"></i>
-                      <div class="form-outline flex-fill mb-0">
-                        <input type="password" id="form3Example4cd" class="form-control" />
-                        <label class="form-label" for="form3Example4cd">Repeat your password</label>
-                      </div>
-                    </div>
-  
+
                     <div class="form-check d-flex justify-content-center mb-5">
-                      <input class="form-check-input me-2" type="checkbox" value="" id="form2Example3c" />
-                      <label class="form-check-label" for="form2Example3">
+                      <input class="form-check-input me-2" type="checkbox" value="" id="t&c" />
+                      <label class="form-check-label" for="t&c">
                         I agree all statements in <a href="#!">Terms of service</a>
                       </label>
                     </div> -->
