--- a/views/register.ejs
+++ b/views/register.ejs
@@ -27,7 +27,7 @@
                     <div class="d-flex flex-row align-items-center mb-4">
                       <i class="fas fa-user fa-lg me-3 fa-fw"></i>
                       <div class="form-outline flex-fill mb-0">
-                        <input type="text" class="form-control" name="username"/>
+                        <input type="text" class="form-control" name="username"     style="border:rgb(88, 88, 90); border-width:2px; border-style:outset;"/>
                         <label class="form-label" for="username">Your Name</label>
                       </div>
                     </div>
@@ -35,7 +35,7 @@
                     <div class="d-flex flex-row align-items-center mb-4">
                       <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
                       <div class="form-outline flex-fill mb-0">
-                        <input type="email" class="form-control" name="useremail" />
+                        <input type="email" class="form-control" name="useremail"   style="border:rgb(88, 88, 90); border-width:2px; border-style:outset;" />
                         <label class="form-label" for="email">Your Email</label>
                       </div>
                     </div>
@@ -43,7 +43,7 @@
                     <div class="d-flex flex-row align-items-center mb-4">
                       <i class="fas fa-lock fa-lg me-3 fa-fw"></i>
                       <div class="form-outline flex-fill mb-0">
-                        <input type="password" class="form-control" name="password" />
+                        <input type="password" class="form-control" name="password"   style="border:rgb(88, 88, 90); border-width:2px; border-style:outset;"/>
                         <label class="form-label" for="password">Password</label>
                       </div>
                     </div>
