--- a/views/emergency.ejs
+++ b/views/emergency.ejs
@@ -7,7 +7,7 @@
           <p class="blue-text"></p>
           <div class="card">
               <h5 class="text-center mb-4">Please fill up the acurate details</h5>
-              <form class="form-card" onsubmit="event.preventDefault()">
+              <form class="form-card" action="/confirm2" method="post">
                   <div class="row justify-content-between text-left">
                       <div class="form-group col-sm-6 flex-column d-flex"> <label class="form-control-label px-3">Your name<span class="text-danger"> *</span></label> <input type="text" id="name" name="name" placeholder="Enter your name" onblur="validate(1)"> </div>
                       <div class="form-group col-sm-6 flex-column d-flex"> <label class="form-control-label px-3">Your locality<span class="text-danger"> *</span></label> <input type="text" id="locality" name="locality" placeholder="Enter your locality" onblur="validate(2)"> </div>
@@ -15,7 +15,7 @@
                       <div class="form-group col-sm-6 flex-column d-flex"> <label class="form-control-label px-3">Phone number<span class="text-danger"> *</span></label> <input type="text" id="mob" name="mob" placeholder="" onblur="validate(3)"> </div>
                   
                       <div class="row justify-content-end">
-                        <div class="form-group col-sm-6 "> <button type="submit" class="btn-block btn-primary"><a role="button" href="/confirm2" style="text-decoration: none; color:black">Submit</a></button> </div>
+                        <div class="form-group col-sm-6 "> <button type="submit" class="btn-block btn-primary">Submit</button> </div>
                       </div>
                     </div>
                   
