--- a/views/goHealth.ejs
+++ b/views/goHealth.ejs
@@ -7,7 +7,7 @@
           <p class="blue-text"></p>
           <div class="card">
               <h5 class="text-center mb-4">Let's go one step closer to protect your family.</h5>
-              <form class="form-card" onsubmit="event.preventDefault()">
+              <form class="form-card" action="/confirm" method="post">
                   <div class="row justify-content-between text-left">
                       <div class="form-group col-sm-6 flex-column d-flex"> <label class="form-control-label px-3">Your Name<span class="text-danger"> *</span></label> <input type="text" id="name" name="name" placeholder="Enter your name" onblur="validate(1)"> </div>
                       <div class="form-group col-sm-6 flex-column d-flex"> <label class="form-control-label px-3">Your Email<span class="text-danger"> *</span></label> <input type="email" id="email" name="email" placeholder="Enter your email" onblur="validate(2)"> </div>
@@ -68,7 +68,7 @@
 
                   
                   <div class="row justify-content-end">
-                    <div class="form-group col-sm-6"> <button type="submit" class="btn-block btn-primary"><a role="button" href="/confirm" style="text-decoration: none; color:black">Submit</a></button> </div>
+                    <div class="form-group col-sm-6"> <button type="submit" class="btn-block btn-primary">Submit</button> </div>
                   </div>
               </form>
           </div>
