--- a/views/confirm2.ejs
+++ b/views/confirm2.ejs
@@ -1,6 +1,6 @@
 <%- include("partials/header"); -%>
 <div class="jumbotron text-center">
-    <h1 class="display-3" style="color: rgb(8, 8, 8);"><strong>Worry not,Help is on your way.</strong>></h1>
+    <h1 class="display-3" style="color: rgb(8, 8, 8);"><strong>Worry not,Help is on your way.</strong></h1>
     <p class="lead"><strong>Our team will reach you out.</strong> Keep calm we got your back.</p>
     <p></p>
     <hr>
