--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,84 +1,57 @@
 <%- include("partials/header"); -%>
-<div class="home">
-               
-             
-                <div class="col-lg-5 px-5 mx-auto order-1 order-lg-2"><img
-                  src="https://png.pngtree.com/thumb_back/fh260/back_our/20190625/ourmid/pngtree-blue-minimalist-medical-banner-image_261515.jpg" alt="" class="img-fluid mb-4 mb-lg-0" width : 300px; />
-                 </div>
 
-       
-       
-           <div class="col-lg-5 d-none d-lg-block ">
-             <h1 text-align  ><b> Welcome to KIT-HEALTH </b></h1>
-                 <h2 mb- 0 ><b><i> A Quick tour  of our website :  </i></b></h2>
-            </div>
-      
-    
-        <div class="col-lg-5">
-          <h1><b> Our Motto </b></h1>
-          <p class="lead text-muted mb-2"><b> We strive to stand behind every person during their emergency and make sure that they receive highest quality medical facilities from the comfort of their home. We at KIT-HEALTH believe that every person has the right to receive best  medical attention ireespective of any differences .</b></p>
-        </div>
-        
-       
+<main>
 
-       <div class="col-lg-5 px-5 mx-auto order-1 order-lg-2"><img
-        src="https://creazilla-store.fra1.digitaloceanspaces.com/cliparts/3229481/online-medicine-delivery-clipart-xl.png" alt="" class="img-fluid mb-4 mb-lg-0" />
-       </div>
-     
-       <div >
-          <Body br ="https://static.vecteezy.com/system/resources/thumbnails/006/712/985/small/abstract-health-medical-science-healthcare-icon-digital-technology-science-concept-modern-innovation-treatment-medicine-on-hi-tech-future-blue-background-for-wallpaper-template-web-design-vector.jpg">
+    <!-- START THE FEATURETTES -->
 
-          </Body>
+    <hr class="featurette-divider">
+
+    <div class="row featurette">
+      <div class="col-md-7">
+        <h2 class="featurette-heading fw-normal lh-1">Welcome to KIT-HEALTH <span class="text-muted">It is a one stop solution for all medical help</span></h2>
+        <p class="lead">We strive to stand behind every person during their emergency and make sure that they receive highest quality medical facilities from the comfort of their home. We at KIT-HEALTH believe that every person has the right to receive best  medical attention ireespective of any differences</p>
       </div>
-        
-        <div class="col-lg-6 d-none d-lg-block ">
-         <h1 text-align : center><b> Why chose us ? </b></h1>
-         <p class="lead text-muted mb-0"><b> We have one of the fastest network of emergency services and 24 * 7 availability of doctors who are fully equiped to deal with any emergency situations . Moreover we have our own online  pharmaceutical store with a wide range of medicines available and one of the fastest delivery services. Additionally we also have online appointment facility where one can book an appointment with the doctor of his/her choice from comfort of their homes. </b></p> 
-
-        </div>
-
-        <div class="col-lg-5 px-5 mx-auto order-1 order-lg-2"><img
-          src="https://i.pinimg.com/originals/b8/23/e3/b823e38cc01fdb9278b6f7faa2feda6d.gif" alt=""
-          class="img-fluid mb-4 mb-lg-0" /></div>
-        </div>
-
-        <div class="col-lg-6 d-none d-lg-block ">
-          <h1 text-align : center><b> Services We Offer </b></h1>
-          <p class="lead text-muted mb-0"><b> The facilities which we offer to our users are : </b>
-            <ol>
-              <li><b> We have the most updated equipments to run all kinds of tests and users can get their reports within minimal time </b></li>
-              <li> <b>The health of our patients is our top priority so we always provide emergency services and an constantly active network for their convenience </b></li>
-              <li><b> Our home delivery services and online pharmaceutical stores allow patients to buy the highest quality medicine within less time and at minimal cost </b></li>
-              <li> <b>We provide online appointment facility for patients so that they are able to make an appointment with doctors of their choice and from comfort of their homes</b> </li>
-            </ol>
-          </p>
-          </div>
-          <div class="col-lg-5 px-5 mx-auto order-1 order-lg-2"><img
-            src="https://www.bioagilytix.com/wp-content/uploads/2022/09/09.optimized.gif" alt="" class="img-fluid mb-4 mb-lg-0" />
-          </div>
-          
-           <div  >
-            <h1 text-align : center><b> We Believe that the Greatest Gift you can give your Family is a Healthy you  </b></h1>
-           </div>
-
-           <div class="col-lg-5 px-5 mx-auto order-1 order-lg-2"><img
-            src="https://i.pinimg.com/originals/61/b2/d3/61b2d33f39927afa72e5f57a28cc7c83.gif" alt="" class="img-fluid mb-4 mb-lg-0" />
-           </div>
-
-          </div>
-        </div>
-       </div>
+      <div class="col-md-5">
+        <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"/><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text></svg>
+      </div>
     </div>
-  </div>
-</div>
+
+    <hr class="featurette-divider">
+
+    <div class="row featurette">
+      <div class="col-md-7 order-md-2">
+        <h2 class="featurette-heading fw-normal lh-1">Oh yeah, it’s that good. <span class="text-muted">See for yourself.</span></h2>
+        <p class="lead">Another featurette? Of course. More placeholder content here to give you an idea of how this layout would work with some actual real-world content in place.</p>
+      </div>
+      <div class="col-md-5 order-md-1">
+        <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"/><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text></svg>
+      </div>
+    </div>
+
+    <hr class="featurette-divider">
+
+    <div class="row featurette">
+      <div class="col-md-7">
+        <h2 class="featurette-heading fw-normal lh-1">And lastly, this one. <span class="text-muted">Checkmate.</span></h2>
+        <p class="lead">And yes, this is the last block of representative placeholder content. Again, not really intended to be actually read, simply here to give you a better view of what this would look like with some actual content. Your content.</p>
+      </div>
+      <div class="col-md-5">
+        <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"/><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text></svg>
+      </div>
+    </div>
+
+    <hr class="featurette-divider">
+
+    <!-- /END THE FEATURETTES -->
+
+  </div><!-- /.container -->
 
 
-
-
-
-
-
-
-    
-
-
+  <!-- FOOTER -->
+  <footer class="container">
+    <p class="float-end"><a href="#">Back to top</a></p>
+    <p>&copy; 2023 &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+  </footer>
+</main>   
+  </body>
+</html>
