--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -55,9 +55,7 @@
     </div>
     <div class="px-3 py-2 border-bottom mb-3">
       <div class="container d-flex flex-wrap justify-content-center">
-        <form class="col-12 col-lg-auto mb-2 mb-lg-0 me-lg-auto" role="search">
-          <input type="search" class="form-control" placeholder="Search..." aria-label="Search">
-        </form>
+        <div class="col-12 col-lg-auto mb-2 mb-lg-0 me-lg-auto"></div>
 
         <div class="text-end">
           <% if (loggedIn) { %>
