--- a/views/home.ejs
+++ b/views/home.ejs
@@ -55,7 +55,7 @@
   <!-- FOOTER -->
   <footer class="container">
     <p class="float-end"><a href="#">Back to top</a></p>
-    <p>&copy; 2023 &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+    <p>&copy; 2023 &middot; <a href="/about">About Us</a> &middot; <a href="/contactus">Contact Us</a></p>
   </footer>
 </main>   
   </body>
